--- a/app/views/articles/_nav.html.erb
+++ b/app/views/articles/_nav.html.erb
@@ -5,3 +5,5 @@
     <div class="two columns" id="sixMinutes">6 Minutes</div>
     <div class="two columns" id="tenMinutes">10 Minutes</div>
 <!-- </div> is added on the index/show pages; don't add it here-->
+<!-- How the heck did you manage to center your HTML source code?!-->
+<!-- Why not just wrap all these "two columns" in one big div called "two columns" and avoid having to add the class to each of them?-->
